# CMakeSeries

./: README.md
ep002/src/: CMakeLists.txt  main.cpp
ep005/: CMakeLists.txt  main.cpp
ep005/inc/: dog.h
ep005/src/: dog.cpp
ep007/: CMakeLists.txt  main.cpp
ep008/: CMakeLists.txt
ep008/src/math/: supermath.cpp
ep009/src/math/: math.cmake
ep009/src/stats/: stats.cmake
